src/objects/VisitScoreResultPotential__c.object
<CustomObject>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitScorePotential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VisitScorePotential</label>
        <referenceTo>VisitScorePotential__c</referenceTo>
        <relationshipLabel>VisitScoreResultPotentials</relationshipLabel>
        <relationshipName>VisitScoreResultPotentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitScoreResult__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VisitScoreResult</label>
        <referenceTo>VisitScoreResult__c</referenceTo>
        <relationshipLabel>VisitScoreResultPotentials</relationshipLabel>
        <relationshipName>VisitScoreResultPotentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>VisitScoreResultPotential</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>rsrp-{000000000}</displayFormat>
        <label>VisitScoreResultPotential Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VisitScoreResultPotentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>